crates/aranya-policy-compiler/tests/data/commands/attributes_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `a` is defined multiple times
  |
3 |         a: 5,
  |         - previous defintion here
4 |         a: "five"
  |         ^ re-defined here
